--- a/query/build.gradle
+++ b/query/build.gradle
@@ -7,11 +7,12 @@ plugins {
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.15'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
-    compile "org.apache.kafka:kafka-clients:2.8.0"
-    compile "org.apache.kafka:kafka-streams:2.8.0"
-    compile 'ch.qos.logback:logback-classic:1.1.2'
-    compile 'ch.qos.logback:logback-core:1.1.2'
+    compile "com.sparkjava:spark-core:2.9.3"
+    compile "org.codehaus.groovy.modules.http-builder:http-builder:0.7"
+
+
+    compile project(':common')
+    compile project(':model')
 
     testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
 }
