--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,4 @@
  */
 
 rootProject.name = 'swfactory'
-include('pusher', 'model', 'common', 'store', 'collector')
+include('pusher', 'model', 'common', 'store', 'collector', 'query')
